force-app/main/default/objects/Notification_Contact__c/Notification_Contact__c.object-meta.xml
<CustomObject>
    <label>Notification Contact</label>
    <nameField>
        <label>Notification Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>