force-app/main/default/objects/Notification_Contact__c/fields/Notification_Account__c.field-meta.xml
<CustomField>
    <fullName>Notification_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Contacts</relationshipLabel>
    <relationshipName>Notification_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>