force-app/main/default/objects/Notification_Contact__c/fields/Notification_Contact__c.field-meta.xml
<CustomField>
    <fullName>Notification_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Notification Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Contacts</relationshipLabel>
    <relationshipName>Notification_Contacts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>