force-app/main/default/objects/Notification_Contact__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <formula>Notification_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification Email</label>
    <type>Text</type>
</CustomField>